--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Merriweather:wght@700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/slick.css">
     <title>BuhOne</title>
 </head>
 <body>
@@ -47,6 +48,31 @@
             </div>
         </div>
     </header>
-    
+    <main>
+        <section class="hero">
+            <div class="hero__slider">
+                <div class="slider__content">
+                    <div class="hero__bg"></div>
+                    <div class="container hero__items">
+                    <h1 class="hero__title">Бухгалтерские услуги
+                        в Санкт-Петербурге</h1>
+                    <a href="#" class="hero__link">Наша презентация</a>
+                </div>
+            </div>
+            <div class="hero__slider">
+                <div class="slider__content">
+                    <div class="hero__bg"></div>
+                    <div class="container">
+                    <h1 class="hero__title">Бухгалтерские услуги
+                        в Санкт-Петербурге</h1>
+                    <a href="#" class="hero__link">Наша презентация</a>
+                </div>
+            </div>
+            </div>
+        </section>
+    </main>
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
