--- a/index.html
+++ b/index.html
@@ -70,6 +70,44 @@
             </div>
             </div>
         </section>
+        <section class="services">
+            <div class="container">
+                <p class="services__subtitle">Наши услуги</p>
+                <h2 class="services__title">Мы специализируемся</h2>
+                <div class="row services__content">
+                    <div class="col-4 services__items">
+                        <img src="./images/service.png" alt="service" class="services__img hover">
+                        <div class="services__img__hover"></div>
+                        <span class="services__text">Бухгалтерское обслуживание</span>
+                    </div>
+                    <div class="col-4 services__items">
+                        <img src="./images/service.png" alt="service" class="services__img hover">
+                        <div class="services__img__hover"></div>
+                        <span class="services__text">Бухгалтерское обслуживание</span>
+                    </div>
+                    <div class="col-4 services__items">
+                        <img src="./images/service.png" alt="service" class="services__img hover">
+                        <div class="services__img__hover"></div>
+                        <span class="services__text">Бухгалтерское обслуживание</span>
+                    </div>
+                    <div class="col-4 services__items">
+                        <img src="./images/service.png" alt="service" class="services__img hover">
+                        <div class="services__img__hover"></div>
+                        <span class="services__text">Бухгалтерское обслуживание</span>
+                    </div>
+                    <div class="col-4 services__items">
+                        <img src="./images/service.png" alt="service" class="services__img hover">
+                        <div class="services__img__hover"></div>
+                        <span class="services__text">Бухгалтерское обслуживание</span>
+                    </div>
+                    <div class="col-4 services__items">
+                        <img src="./images/service.png" alt="service" class="services__img hover">
+                        <div class="services__img__hover"></div>
+                        <span class="services__text">Бухгалтерское обслуживание</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/slick.min.js"></script>
