began to make new block

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </section>
         <section class="services">
             <div class="container">
-                <p class="services__subtitle">Наши услуги</p>
+                <p class="subtitle">Наши услуги</p>
                 <h2 class="services__title">Мы специализируемся</h2>
                 <div class="row services__content">
                     <div class="col-4 services__items">
@@ -104,6 +104,26 @@
                         <img src="./images/service.png" alt="service" class="services__img hover">
                         <div class="services__img__hover"></div>
                         <span class="services__text">Бухгалтерское обслуживание</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container">
+                <p class="subtitle">О нас</p>
+                <div class="row">
+                    <div class="col-5 about__left">
+                        <h2 class="about__title">Компания <span>ИвановПром</span></h2>
+                        <p class="about__description">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
+                            В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. 
+                            Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
+                    </div>
+                    <div class="col-7 about__right">
+                        <div class="about__items">
+                            <p class="about__number">90</p>
+                            <p class="about__text">Завершено крупных сделок</p>
+                            <a href="#" class="about__link">Все кейсы</a>
+                        </div>
                     </div>
                 </div>
             </div>
