add 'about' and 'clients'

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
     <main>
         <section class="hero">
-            <div class="hero__slider">
+            <div class="slider">
                 <div class="slider__content">
                     <div class="hero__bg"></div>
                     <div class="container hero__items">
@@ -59,15 +59,14 @@
                     <a href="#" class="hero__link">Наша презентация</a>
                 </div>
             </div>
-            <div class="hero__slider">
+            <div class="slider">
                 <div class="slider__content">
                     <div class="hero__bg"></div>
-                    <div class="container">
+                    <div class="container hero__items">
                     <h1 class="hero__title">Бухгалтерские услуги
                         в Санкт-Петербурге</h1>
                     <a href="#" class="hero__link">Наша презентация</a>
                 </div>
-            </div>
             </div>
         </section>
         <section class="services">
@@ -123,6 +122,55 @@
                             <p class="about__number">90</p>
                             <p class="about__text">Завершено крупных сделок</p>
                             <a href="#" class="about__link">Все кейсы</a>
+                        </div>
+                        <div class="about__items">
+                            <p class="about__number">90</p>
+                            <p class="about__text">Завершено крупных сделок</p>
+                            <a href="#" class="about__link">Все кейсы</a>
+                        </div>
+                        <div class="about__items">
+                            <p class="about__number">90</p>
+                            <p class="about__text">Завершено крупных сделок</p>
+                            <a href="#" class="about__link">Все кейсы</a>
+                        </div>
+                        <div class="about__items">
+                            <p class="about__number">90</p>
+                            <p class="about__text">Завершено крупных сделок</p>
+                            <a href="#" class="about__link">Все кейсы</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="clients">
+            <div class="container">
+                <p class="subtitle">Наши клиенты</p>
+                <h2 class="clients__title">С нами работают</h2>
+                <div class="clients__slider">
+                    <div class="clients__items">
+                        <div class="clients__content">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                        </div>
+                        <div class="clients__content">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                        </div>
+                        <div class="clients__content">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                        </div>
+                        <div class="clients__content">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
+                            <img src="./images/microsoft.png" alt="" class="about__img">
                         </div>
                     </div>
                 </div>
