--- a/index.html
+++ b/index.html
@@ -50,22 +50,44 @@
     </header>
     <main>
         <section class="hero">
-            <div class="slider">
-                <div class="slider__content">
-                    <div class="hero__bg"></div>
-                    <div class="container hero__items">
-                    <h1 class="hero__title">Бухгалтерские услуги
-                        в Санкт-Петербурге</h1>
-                    <a href="#" class="hero__link">Наша презентация</a>
-                </div>
-            </div>
-            <div class="slider">
-                <div class="slider__content">
-                    <div class="hero__bg"></div>
-                    <div class="container hero__items">
-                    <h1 class="hero__title">Бухгалтерские услуги
-                        в Санкт-Петербурге</h1>
-                    <a href="#" class="hero__link">Наша презентация</a>
+            <div class="hero__slider">
+                <div class="hero__items">
+                    <div class="hero__block">
+                        <div class="container">
+                            <div class="hero__content">
+                                <h1 class="hero__title">Бухгалтерские услуги
+                                    в Санкт-Петербурге</h1>
+                                <a href="#" class="hero__link">Наша презентация</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="hero__block">
+                        <div class="container">
+                            <div class="hero__content">
+                                <h1 class="hero__title">Бухгалтерские услуги
+                                    в Санкт-Петербурге</h1>
+                                <a href="#" class="hero__link">Наша презентация</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="hero__block">
+                        <div class="container">
+                            <div class="hero__content">
+                                <h1 class="hero__title">Бухгалтерские услуги
+                                    в Санкт-Петербурге</h1>
+                                <a href="#" class="hero__link">Наша презентация</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="hero__block">
+                        <div class="container">
+                            <div class="hero__content">
+                                <h1 class="hero__title">Бухгалтерские услуги
+                                    в Санкт-Петербурге</h1>
+                                <a href="#" class="hero__link">Наша презентация</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -171,6 +193,76 @@
                             <img src="./images/microsoft.png" alt="" class="about__img">
                             <img src="./images/microsoft.png" alt="" class="about__img">
                             <img src="./images/microsoft.png" alt="" class="about__img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="reviews">
+            <div class="container">
+                <p class="subtitle">Отзывы</p>
+                <h2 class="reviews__title">Ваши благодарности</h2>
+                <div class="reviews__slider">
+                    <div class="reviews__items">
+                        <div class="reviews__block">
+                            <p class="reviews__description">
+                                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
+                                Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
+                                В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. 
+                                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
+                            </p>
+                            <div class="row reviews__content">
+                                <img src="./images/face.svg" alt="" class="reviews__img">
+                                <div class="reviews__text">
+                                    <p class="reviews__name">Екатерина Иванова</p>
+                                    <p class="reviews__position">Директор ООО “Раз-два”</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reviews__block">
+                            <p class="reviews__description">
+                                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
+                                Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
+                                В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. 
+                                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
+                            </p>
+                            <div class="row reviews__content">
+                                <img src="./images/face.svg" alt="" class="reviews__img">
+                                <div class="reviews__text">
+                                    <p class="reviews__name">Екатерина Иванова</p>
+                                    <p class="reviews__position">Директор ООО “Раз-два”</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reviews__block">
+                            <p class="reviews__description">
+                                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
+                                Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
+                                В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. 
+                                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
+                            </p>
+                            <div class="row reviews__content">
+                                <img src="./images/face.svg" alt="" class="reviews__img">
+                                <div class="reviews__text">
+                                    <p class="reviews__name">Екатерина Иванова</p>
+                                    <p class="reviews__position">Директор ООО “Раз-два”</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reviews__block">
+                            <p class="reviews__description">
+                                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
+                                Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
+                                В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. 
+                                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. 
+                            </p>
+                            <div class="row reviews__content">
+                                <img src="./images/face.svg" alt="" class="reviews__img">
+                                <div class="reviews__text">
+                                    <p class="reviews__name">Екатерина Иванова</p>
+                                    <p class="reviews__position">Директор ООО “Раз-два”</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
