--- a/index.html
+++ b/index.html
@@ -306,7 +306,8 @@
             </div>
         </div>
     </footer>
-    
+    <script src="./js/TweenMax.min.js"></script>
+    <script src="./js/parallax.min.js"></script>
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/index.js"></script>
