add some animation

--- a/index.html
+++ b/index.html
@@ -300,14 +300,13 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <div class="row footer___items">
+            <div class="row footer__items">
                 <p>2019 (с) Все права защищены. БухОне.ру</p>
                 <p>Разработано: BuhOne</p>
             </div>
         </div>
     </footer>
     <script src="./js/TweenMax.min.js"></script>
-    <script src="./js/parallax.min.js"></script>
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/index.js"></script>
