add more animations

--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
                 </div>
                 <div class="col-7">
                     <div class="header__contacts">
-                        <div class="header__item">
+                        <div class="header__item wow header__first" data-wow-delay="0.2s">
                             <img src="./images/phone.svg" alt="phone">
                             <a href="#" class="header__link">8 (111) 222-33-44</a>
                         </div>
-                        <div class="header__item">
+                        <div class="header__item wow header__second" data-wow-delay="0.4s">
                             <img src="./images/watch.svg" alt="watch">
                             <a href="#" class="header__link">Пн-Пт 10:00-18:00</a>
                         </div>
-                        <div class="header__item">
+                        <div class="header__item wow header__third" data-wow-delay="0.6s">
                             <img src="./images/mail.svg" alt="mail">
                             <a href="#" class="header__link">order@buhone.ru</a>
                         </div>
-                        <div class="header__item">
+                        <div class="header__item wow header__fourth" data-wow-delay="0.8s">
                             <img src="./images/point.svg" alt="point">
                             <a href="#" class="header__link">Невский пр. 130</a>
                         </div>
                     </div>
                     <nav class="header__nav nav">
                         <ul class="nav__menu">
-                            <li><a href="#" class="nav__link">Главная</a></li>
-                            <li><a href="#" class="nav__link">услуги</a></li>
-                            <li><a href="#" class="nav__link">кейсы</a></li>
-                            <li><a href="#" class="nav__link">о компании</a></li>
-                            <li><a href="#" class="nav__link">контакты</a></li>
+                            <li><a href="#" class="nav__link nav__first" data-wow-delay="0.1s">Главная</a></li>
+                            <li><a href="#" class="nav__link nav__second" data-wow-delay="0.3s">услуги</a></li>
+                            <li><a href="#" class="nav__link nav__third" data-wow-delay="0.5s">кейсы</a></li>
+                            <li><a href="#" class="nav__link nav__fourth" data-wow-delay="0.7s">о компании</a></li>
+                            <li><a href="#" class="nav__link nav__fifth" data-wow-delay="0.9s">контакты</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -85,32 +85,32 @@
                 <p class="subtitle">Наши услуги</p>
                 <h2 class="services__title">Мы специализируемся</h2>
                 <div class="row services__content">
-                    <div class="col-4 services__items">
+                    <div class="col-4 services__items service__first">
                         <img src="./images/service.png" alt="service" class="services__img hover">
                         <div class="services__img__hover"></div>
                         <span class="services__text">Бухгалтерское обслуживание</span>
                     </div>
-                    <div class="col-4 services__items">
+                    <div class="col-4 services__items service__second">
                         <img src="./images/service.png" alt="service" class="services__img hover">
                         <div class="services__img__hover"></div>
                         <span class="services__text">Бухгалтерское обслуживание</span>
                     </div>
-                    <div class="col-4 services__items">
+                    <div class="col-4 services__items service__third">
                         <img src="./images/service.png" alt="service" class="services__img hover">
                         <div class="services__img__hover"></div>
                         <span class="services__text">Бухгалтерское обслуживание</span>
                     </div>
-                    <div class="col-4 services__items">
+                    <div class="col-4 services__items service__fourth">
                         <img src="./images/service.png" alt="service" class="services__img hover">
                         <div class="services__img__hover"></div>
                         <span class="services__text">Бухгалтерское обслуживание</span>
                     </div>
-                    <div class="col-4 services__items">
+                    <div class="col-4 services__items service__fifth">
                         <img src="./images/service.png" alt="service" class="services__img hover">
                         <div class="services__img__hover"></div>
                         <span class="services__text">Бухгалтерское обслуживание</span>
                     </div>
-                    <div class="col-4 services__items">
+                    <div class="col-4 services__items service__sixth">
                         <img src="./images/service.png" alt="service" class="services__img hover">
                         <div class="services__img__hover"></div>
                         <span class="services__text">Бухгалтерское обслуживание</span>
@@ -129,22 +129,22 @@
                             Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
                     </div>
                     <div class="col-7 about__right">
-                        <div class="about__items">
+                        <div class="about__items about__down">
                             <p class="about__number">90</p>
                             <p class="about__text">Завершено крупных сделок</p>
                             <a href="#" class="about__link">Все кейсы</a>
                         </div>
-                        <div class="about__items">
+                        <div class="about__items about__down">
                             <p class="about__number">90</p>
                             <p class="about__text">Завершено крупных сделок</p>
                             <a href="#" class="about__link">Все кейсы</a>
                         </div>
-                        <div class="about__items">
+                        <div class="about__items about__up">
                             <p class="about__number">90</p>
                             <p class="about__text">Завершено крупных сделок</p>
                             <a href="#" class="about__link">Все кейсы</a>
                         </div>
-                        <div class="about__items">
+                        <div class="about__items about__up">
                             <p class="about__number">90</p>
                             <p class="about__text">Завершено крупных сделок</p>
                             <a href="#" class="about__link">Все кейсы</a>
@@ -310,5 +310,6 @@
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/index.js"></script>
+    
 </body>
 </html>
